# campus-os-erp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: academic.py  attendance.py  auth.py  dashboard.py  documents.py  examinations.py  faculty.py  fees.py  notices.py  roles.py  router.py  students.py  users.py
app/core/: config.py  logging.py
app/database/: __init__.py  base.py  session.py
app/dependencies/: auth.py
app/models/: __init__.py  academic.py  attendance.py  document.py  examination.py  faculty.py  fee.py  notice.py  role.py  student.py  user.py
app/repositories/: academic_repository.py  faculty_repository.py  refresh_token_repository.py  role_repository.py  student_repository.py  user_repository.py
app/schemas/: academic.py  attendance.py  auth.py  examination.py  faculty.py  fee.py  notice.py  rbac.py  student.py  user.py
app/security/: passwords.py  tokens.py
app/services/: academic_service.py  attendance_service.py  auth_service.py  examination_service.py  (+5 more)
docs/: academic.md  architecture.md  attendance.md  authentication.md  configuration.md  database-schema.md  database.md  deployment.md  docker.md  faculty.md  notices.md  rbac.md  students.md  testing.md  users.md
migrations/: env.py  script.py.mako
tests/: test_academic_schemas.py  test_attendance_schema.py  test_config.py  test_database_base.py  test_faculty_schemas.py  test_grade_calculation.py  test_health.py  test_rbac.py  test_student_schemas.py  test_tokens.py  test_user_schemas.py
(+13 files in other folders)
